configurando layout definitivo da aplicação

--- a/src/app/shared/main-layout/main-layout.component.html
+++ b/src/app/shared/main-layout/main-layout.component.html
@@ -1,1 +1,6 @@
-<app-menu></app-menu>
+<main>
+    <app-menu></app-menu>
+    <section class="conteudo">
+        <router-outlet/>
+    </section>
+</main>
