--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -1,12 +1,11 @@
 .app-menu {
     position: relative;
-    width: 250px;
+    width: 300px;
     height: 100vh;
     display: flex;
     font-family: 'Lexend';
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(180deg, #005669 15%, #00ffea 120.5%); 
     .logo {
         margin: 20px;
     }
@@ -17,17 +16,24 @@
     list-style: none;
     padding: 0;
     display: flex;
-    gap: 50px;
+    gap: 30px;
     flex-direction: column;
-    color: white;
-    font-size: 20px;
     font-weight: 500;
+    
 
+    li {
+        display: flex;
+        gap: 30px;
+        font-size: 17px;
+
+
+    }
     a {
         position: relative;
-        color: #fff;
+        color: black;
         text-decoration: none;  
     }
+
       
     a:before {
         content: "";
@@ -44,11 +50,10 @@
         transition: all 0.3s ease-in-out 0s;
     }
       
-    a:hover:before {
+    a:hover:before,
+    a.active:before {
         visibility: visible;
         -webkit-transform: scaleX(1);
         transform: scaleX(1);
     }
 }
-
-
