--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,5 @@
 <main class="main-section">
-    <h3>{{title}}</h3>
-    <div class="content-container">
-        <div class="wrap">
-            <h6>Cliente</h6>
-            <button class="green-button">Registrar Cliente</button>
-            <button class="red-button">Deletar Cliente</button>
-        </div>
-        <div class="wrap">
-            <h6>Produto</h6>
-            <button class="green-button">Registrar Produto</button>
-            <button class="red-button">Deletar Produto</button>
-        </div>
-        <div class="wrap">
-            <h6>Fornecedor</h6>
-            <button class="green-button">Registrar Fornecedor</button>
-            <button class="red-button">Deletar Fornecedor</button>
-        </div>
-        <div class="wrap">
-            <h6>Venda</h6>
-            <button class="green-button">Registrar Venda</button>
-            <button class="red-button">Deletar Venda</button>
-        </div>
-        <div class="wrap">
-            <h6>Compra</h6>
-            <button class="green-button">Registrar Compra</button>
-            <button class="red-button">Deletar Compra</button>
-        </div>
-    </div>
-    
+    <h3>{{section}}</h3>
+    <app-home-summary></app-home-summary>
+    <app-home-featured></app-home-featured>
 </main>
