--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,50 +1,14 @@
 
 .main-section {
+    font-family: 'Poppins';
+    margin: 20px 0;
     display: flex;
+    flex: 1;
     flex-direction: column;
     justify-content: center;
-    color: hsl(180, 97%, 14%);
-}
-
-h3 {
-    padding: 50px 0px;
-    color: #02d1c0;
-    font-family: 'Poppins';
-}
-
-.content-container {
-    gap: 150px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    justify-content: space-around;
-    .wrap {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        h6 {
-            color: #ffffff;
-            font-family: 'Lexend';
-        }
-        button {
-            color: white;
-            font-family: 'Poppins';
-            font-weight: 600;
-            width: 200px;
-            height: 50px;
-            border-radius: 50px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
-            border: none;
-            cursor: pointer;
-        }
+    h3 {
+        font-size: 25px;
+        font-weight: 600;
     }
 }
 
-.green-button {
-    background-color: #01f171; /* Verde */
-}
-
-.red-button {
-    background-color: #F44336; /* Vermelho */
-}
