--- a/src/app/components/produtos/produtos-form/produtos-form.component.html
+++ b/src/app/components/produtos/produtos-form/produtos-form.component.html
@@ -1,1 +1,36 @@
-<p>produtos-form works!</p>
+
+
+
+<mat-card appearance="outlined">
+    <mat-card-header>
+        <h3>Adicionar novo produto</h3>
+    </mat-card-header>
+      <mat-card-content>
+        <form [formGroup]="form" class="form-wrap">
+            <mat-form-field appearance="fill">
+                <input matInput placeholder="Nome" formControlName="name">
+            </mat-form-field>
+    
+            <mat-form-field appearance="fill">
+                <input matInput placeholder="Descrição" formControlName="description">
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <input matInput placeholder="Preço" formControlName="price">
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <input matInput placeholder="Quantidade" formControlName="quantity">
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <input matInput placeholder="IMG" formControlName="img">
+            </mat-form-field>
+        </form>
+      </mat-card-content>
+
+      <mat-card-actions>
+        <button mat-button class="primary" (click)="onSubmit()">Salvar</button>
+        <button mat-button class="secondary" (click)="onCancel()">Cancelar</button>
+      </mat-card-actions>
+</mat-card>
