implementando interface de produtos e roteamento inicial

--- a/src/app/components/produtos/produtos.component.html
+++ b/src/app/components/produtos/produtos.component.html
@@ -1,1 +1,6 @@
-<p>produtos works!</p>
+
+<app-produtos-header></app-produtos-header>
+<div class="product-content">
+    <app-produtos-search></app-produtos-search>
+    <app-produtos-table-list></app-produtos-table-list>
+</div>
