--- a/src/app/components/produtos/produtos.component.html
+++ b/src/app/components/produtos/produtos.component.html
@@ -4,3 +4,7 @@
     <app-produtos-search></app-produtos-search>
     <app-produtos-table-list></app-produtos-table-list>
 </div>
+<ng-container 
+    
+>
+</ng-container>
