--- a/src/app/components/produtos/components/produtos-table-list/produtos-table-list.component.html
+++ b/src/app/components/produtos/components/produtos-table-list/produtos-table-list.component.html
@@ -1,4 +1,6 @@
-<table mat-table [dataSource]="product">
+
+
+<table *ngIf="(product | async) as product; else noProduct"  mat-table [dataSource]="product">
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID </th>
         <td mat-cell *matCellDef="let produto"> {{produto.id}} </td>
@@ -16,7 +18,7 @@
     
     <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef> Preço </th>
-        <td mat-cell *matCellDef="let produto"> {{produto.price}} </td>
+        <td mat-cell *matCellDef="let produto">R$ {{produto.price}} </td>
     </ng-container>
 
     <ng-container matColumnDef="quantity">
@@ -24,7 +26,26 @@
         <td mat-cell *matCellDef="let produto"> {{produto.quantity}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="totalValue">
+        <th mat-header-cell *matHeaderCellDef> Valor em Estoque </th>
+        <td mat-cell *matCellDef="let produto">R$ {{produto.totalValue}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let produto">
+            <a (click)="onEdit(produto.id)">
+                <mat-icon>edit</mat-icon>
+            </a>
+            
+        </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
 </table>
-  
+<ng-template  #noProduct>
+    <ng-container >
+        <p>Parece que você ainda não adicionou nenhum produto.</p>
+    </ng-container>
+</ng-template>
