implementação dos services

--- a/src/app/components/home/components/home-featured/home-featured.component.html
+++ b/src/app/components/home/components/home-featured/home-featured.component.html
@@ -1,3 +1,4 @@
-<p>Produtos em Destaque</p>
-<br>Produtos com menor quantidade (próximos de esgotar) {{total}}
-<br>Produtos mais vendidos. {{total}}
+<h6>Produtos em Destaque</h6>
+<app-produtos-table-list
+    [product]="featuredProducts"
+></app-produtos-table-list>
