--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <main class="main-section">
     <h3>{{section}}</h3>
     <app-home-summary></app-home-summary>
-    <app-home-featured></app-home-featured>
+    <div class="section-wrapper">
+        <app-home-featured></app-home-featured>
+    </div>
 </main>
