--- a/src/app/components/home/components/home-summary/home-summary.component.scss
+++ b/src/app/components/home/components/home-summary/home-summary.component.scss
@@ -2,15 +2,29 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-
+    
     .summary-wrap {
         font-weight: 600;
         margin: 25px 0;
         width: 180px;
-        height: 150px;
+        padding: 15px;
         border: 1px solid rgb(216, 216, 216);
         border-radius: 10px;
-        padding: 25px;
         color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        text-align: justify;
+        h6 {
+            font-size: 18px;
+        }
+        
+        p {
+            text-align: center;
+            font-size: 25px;
+        }
     }
+
+
+    
 }
