--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,10 @@
-<main class="main-section">
+<main class="main-section"> 
     <h3>{{section}}</h3>
+    <h6>Resumo do Estoque</h6>
     <app-home-summary></app-home-summary>
     <div class="section-wrapper">
+        <h6>Produtos em Destaque</h6>
+        <p>Acima da média de estoque</p>
         <app-home-featured></app-home-featured>
     </div>
 </main>
