--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,17 +1,31 @@
 
 .main-section {
-    font-family: 'Poppins';
     margin: 20px 0;
     display: flex;
     flex: 1;
     flex-direction: column;
     justify-content: center;
+    width: 90%;
+
+    .section-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
     h3 {
         font-size: 25px;
         font-weight: 600;
     }
-    .section-wrapper {
-        width: 85%;
+    h6 {
+        font-size: 18px;
+        font-weight: 500;
+        font-family: 'poppins';
+    }
+    p {
+        margin-left: 10px;
+        margin-top: 30px;
+        font-size: 15px;
+        font-weight: 600;
+        color: rgba(0, 0, 0, 0.815);
     }
 }
 
