--- a/src/app/components/home/components/home-summary/home-summary.component.scss
+++ b/src/app/components/home/components/home-summary/home-summary.component.scss
@@ -1,8 +1,9 @@
 .summary-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
-    
+    width: 100%;
+    height: auto;
+    justify-content: space-around;
     .summary-wrap {
         font-weight: 600;
         margin: 25px 0;
@@ -14,9 +15,10 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        text-align: justify;
+        text-align: center;
         h6 {
             font-size: 18px;
+            font-family: 'poppins';
         }
         
         p {
